fix login button width and checkbox margin to center-align with login button

--- a/scss/site.scss
+++ b/scss/site.scss
@@ -159,6 +159,7 @@ input {
 label {
   color: $slate;
   font-weight: normal;
+  margin-top: 7px;
   margin-bottom: 0;
   padding-left: 25px;
   cursor: pointer;
@@ -214,10 +215,11 @@ input[type=checkbox] {
 
 .btn {
   width: 100%;
+  height: 50px;
   margin: 20px 0 17px; // .btn class has margin-bottom of 0
   display: inline-block;
   @media (min-width: 431px) {
-    width: 50%;
+    width: 140px;
     margin: 10px 0 13px;
   }
 }
@@ -240,6 +242,7 @@ input[type=checkbox] {
 }
 
 .forgot {
+  clear: both;
   a {
     color: $slate;
     display: inline-block;
